<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background__1_"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_gray"
        android:layout_above="@id/list_layout"
        android:scaleX="0.2"
        android:scaleY="0.5"
        android:contentDescription="@string/app_name">

    </ImageView>

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:background="@drawable/text_box"
            android:hint="@string/username"
            android:autofillHints="name"
            android:inputType="text">
        </EditText>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:background="@drawable/text_box"
            android:hint="@string/email_address"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:background="@drawable/text_box"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:id="@+id/confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:background="@drawable/text_box"
            android:hint="@string/confirm_password"
            android:autofillHints="password"
            android:inputType="textPassword">

        </EditText>

        <EditText
            android:id="@+id/goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:background="@drawable/text_box"
            android:hint="Let us know your goal"
            android:inputType="text">

        </EditText>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:visibility="gone">

    </ProgressBar>


    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_layout"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn"
        android:text="@string/create_account">

    </Button>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account"
        android:background="@drawable/btn_white"
        android:layout_marginStart="160dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="40dp"
        android:text="@string/log_in"
        android:textColor="@color/blue"
        android:textStyle="normal">


    </Button>




</RelativeLayout>