<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background__1_"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_gray"
        android:layout_above="@id/list_layout"
        android:scaleX="0.2"
        android:scaleY="0.5"

        android:contentDescription="@string/app_name">

    </ImageView>

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"

            android:background="@drawable/text_box"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress">
        </EditText>

        <EditText
            android:autofillHints="password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/text_box"
            android:hint="@string/password"
            android:inputType="textPassword">
        </EditText>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            >

        </TextView>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_below="@id/list_layout"
        android:visibility="gone"
        >

    </ProgressBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_layout"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_login"
            android:text="@string/log_in_BTN"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck">

        </Button>



        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/btn_white"
            android:layout_marginStart="180dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="160dp"

            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textStyle="normal">


        </TextView>

    </LinearLayout>


</RelativeLayout>