<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background__1_"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_gray"
        android:layout_above="@id/list_layout"
        android:scaleX="0.2"
        android:scaleY="0.5"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/app_name">

    </ImageView>

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_Password"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_marginStart="110dp"
            >

        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"

            android:background="@drawable/text_box"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress">
        </EditText>




    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_below="@id/list_layout"
        android:visibility="gone"
        >

    </ProgressBar>

    <Button
        android:id="@+id/recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_layout"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_login"
        android:text="@string/recover"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck">

    </Button>


    <TextView
        android:id="@+id/login"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/recover"
        android:layout_marginStart="155dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"

        android:text="@string/go_back"
        android:textColor="@color/blue"
        android:textStyle="normal">


    </TextView>




</RelativeLayout>