<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfilePageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF"
        android:elevation="2dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:background="@drawable/life_me_up__1_"
                android:contentDescription="@string/life_me_up"
                android:layout_marginTop="15dp"
                android:layout_marginStart="170dp"
                >
            </ImageView>

            <ImageButton
                android:id="@+id/prof_menu"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/menu"
                android:layout_marginStart="380dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/notify"
                >

            </ImageButton>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar"
        android:id="@+id/linear1"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="110dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/profile_image"
                android:src="@drawable/user_60"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
                >
            </de.hdodenhof.circleimageview.CircleImageView>

            <ImageButton
                android:visibility="gone"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_baseline_edit_24"
                android:id="@+id/edit_prof"
                android:layout_alignEnd="@id/profile_image"
                android:layout_alignBottom="@id/profile_image">

            </ImageButton>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/username"
                android:maxLines="1"
                android:textColor="@color/black"
                android:id="@+id/name"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/insert_your_goal"
                android:maxLines="3"
                android:textColor="#000000"
                android:id="@+id/goal"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                >

            </TextView>


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:id="@+id/combined_layout"
        >

        <LinearLayout
            android:id="@+id/count_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:id="@+id/friends_num">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/friends"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    >

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:id="@+id/posts_num">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/posts"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    >

                </TextView>

            </LinearLayout>

        </LinearLayout>
        
        <Button
            android:layout_below="@+id/count_layout"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="italic"
            android:textSize="18sp"
            android:background="@drawable/btn"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_btn"
            android:visibility="visible">

        </Button>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/combined_layout"
        android:background="#B6B3B3"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/view">

    </View>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view"
        android:orientation="horizontal"
        android:id="@+id/recycler_view">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>